[package]
name = "dev_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
localtunnel-client = "0.1.1"
tokio = { version = "1.28.1", features = ["full"] }
rocket = "=0.5.0-rc.3"
uuid = { version = "1.3.3", features = ["v4"] }
notify = "6.0.0"
futures = "0.3.28"
